<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_lista"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_cadastrar"
        android:icon="@drawable/ic_add"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/title_map" />


    <item
        android:id="@+id/navigation_sobre"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_sair"
        android:icon="@drawable/ic_logout"
        android:title="@string/title_sair" />

</menu>
