<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_signup"
        android:textAlignment="center"
        android:paddingTop="@dimen/singup_title_top"
        android:paddingBottom="@dimen/singup_title_top"
        android:textStyle="bold"
        android:textSize="@dimen/signup_text_size"/>

    <EditText
        android:id="@+id/edittextemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/title_email_signup"/>

    <EditText
        android:id="@+id/edittextpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="textPassword"

        android:ellipsize="start"
        android:hint="@string/title_password_signup"/>

    <EditText
        android:id="@+id/edittextcheckpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="textPassword"

        android:ellipsize="start"
        android:hint="@string/title_checkpassword_singup"/>

    <Button
        android:id="@+id/buttonsave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_save_button_signup" />
</android.support.v7.widget.LinearLayoutCompat>