<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/fragment_cadastro"
    tools:context="com.vitorjorge.englishexpertnotes.englishexpertnotes.fragments.CadastroFragment">
    <EditText
        android:id="@+id/editTextInventoryName"
        android:hint="@string/hint_edittext_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/buttonSaveInventory"
        android:text="@string/title_savebutton_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_text_cadastro" />
</LinearLayout>


